# dirt

./: .env.client.example  .env.example  .env.server.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  clippy.toml  rustfmt.toml
.github/scripts/: managed-mode-e2e.sh  security-guard.sh
.github/workflows/: ci.yml  claude-code-review.yml  managed-mode-e2e.yml
crates/dirt-api/: Cargo.toml
crates/dirt-api/src/: auth.rs  config.rs  error.rs  main.rs  media.rs  rate_limit.rs  routes.rs  turso.rs
crates/dirt-cli/: Cargo.toml
crates/dirt-cli/src/: auth.rs  bootstrap_manifest.rs  cli.rs  config_profiles.rs  error.rs  main.rs  managed_sync.rs  tests.rs
crates/dirt-cli/src/commands/: add.rs  auth_cmd.rs  common.rs  completions.rs  config.rs  delete.rs  edit.rs  export.rs  list.rs  mod.rs  search.rs  sync.rs
crates/dirt-core/: Cargo.toml
crates/dirt-core/src/: error.rs  export.rs  lib.rs  state.rs  util.rs
crates/dirt-core/src/auth/: mod.rs
crates/dirt-core/src/config/: mod.rs
crates/dirt-core/src/db/: connection.rs  migrations.rs  mod.rs  repository.rs  settings_repository.rs
crates/dirt-core/src/media/: mod.rs
crates/dirt-core/src/models/: attachment.rs  mod.rs  note.rs  settings.rs  sync_conflict.rs  tag.rs
crates/dirt-core/src/search/: mod.rs
crates/dirt-core/src/services/: database.rs  mod.rs
crates/dirt-core/src/storage/: mod.rs  r2.rs  thumbnail.rs  voice_memo.rs
crates/dirt-core/src/sync/: mod.rs
crates/dirt-desktop/: Cargo.toml  Dioxus.toml  build.rs
crates/dirt-desktop/assets/: dx-components-theme.css  theme-overrides.css
crates/dirt-desktop/src/: app.rs  bootstrap_config.rs  hotkey.rs  main.rs  queries.rs  state.rs  theme.rs  time_format.rs  tray.rs
crates/dirt-desktop/src/components/: mod.rs  note_actions.rs  note_card.rs  note_editor.rs  note_list.rs  quick_capture.rs  search_bar.rs  settings.rs  sidebar.rs  toolbar.rs
crates/dirt-desktop/src/components/button/: component.rs
crates/dirt-desktop/src/components/note_editor/: attachment_panel.rs  attachment_preview.rs  attachment_utils.rs  mod.rs  transcription.rs
crates/dirt-desktop/src/components/settings/: auth_settings.rs  media_settings.rs  mod.rs  row.rs  sync_settings.rs  theme_settings.rs
crates/dirt-desktop/src/services/: auth.rs  database.rs  export.rs  media_api.rs  mod.rs  session_store.rs  sync_auth.rs  transcription.rs  voice_memo.rs
crates/dirt-desktop/src/views/: home.rs  mod.rs
crates/dirt-mobile/: Cargo.toml  Dioxus.toml  build.rs
crates/dirt-mobile/android/: AndroidManifest.xml  MainActivity.kt
crates/dirt-mobile/android/res/xml/: network_security_config.xml
crates/dirt-mobile/src/: app.rs  app_shell.rs  attachments.rs  auth.rs  bootstrap_config.rs  config.rs  data.rs  export.rs  filters.rs  launch.rs  main.rs  media_api.rs  paths.rs  secret_store.rs  sync_auth.rs  ui.rs  voice_memo.rs
crates/dirt-mobile/src/views/: editor.rs  list.rs  settings.rs
docs/: BACKEND_API.md  DESIGN.md  MANUAL_QA_MANAGED_MODE.md  RELEASE_CHECKLIST.md  SECURITY_BASELINE.md  SECURITY_OPERATIONS.md  feature-parity.md  mobile-ui-conventions.md
docs/brainstorms/: 2026-02-04-dirt-app-brainstorm.md
docs/plans/: 2026-02-04-feat-phase-0-and-1-desktop-mvp-plan.md
