[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Error0229/dirt"
authors = ["Cato"]
description = "Do I Remember That? - A cross-platform app for capturing fleeting thoughts"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Testing
pretty_assertions = "1.4"

# Dioxus
dioxus = { version = "0.7", features = ["desktop"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow these pedantic lints (too noisy for new project)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
significant_drop_tightening = "allow"
future_not_send = "allow"

# Restriction lints (opt-in)
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
