[package]
name = "dirt-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend API for secure credential brokering and media signing"

[[bin]]
name = "dirt-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono.workspace = true
jsonwebtoken = "9.3"
base64 = "0.22"
http = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-credential-types = "1"
url = "2"
dotenvy = "0.15"

[lints]
workspace = true
