[package]
name = "dirt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Dirt - models, database, and business logic"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
libsql.workspace = true
tokio.workspace = true
tracing.workspace = true
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
image = "0.25"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
dotenvy = "0.15"

[lints]
workspace = true
