[package]
name = "dirt-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop application for Dirt"

[[bin]]
name = "dirt"
path = "src/main.rs"

[dependencies]
dirt-core = { path = "../dirt-core" }
dioxus = { workspace = true, features = ["desktop"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dirs = "6"
tokio = { version = "1", features = ["time"] }
global-hotkey = "0.6"
tray-icon = "0.19"
dotenvy = "0.15"
image = "0.25"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-query = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
keyring = "3.6.2"
mime_guess = "2.0"
base64 = "0.22"
rfd = "0.15"
thiserror.workspace = true

[lints]
workspace = true
